# nastie

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
templates/: index.html
