[package]
name = "nastie"
version = "1.1.0"
authors = ["Simon Allen <simon@simonallen.org>"]
edition = "2018"
description = "TrueNAS/FreeNAS plugin/jail web directory"

[dependencies]
clap = "^2.33.0"
json = "^0.11.6"
rocket = "^0.4.4"
rust-embed = "^5.5.1"
handlebars = "^3.0.1"
serde = { version = "^1.0.51", features = ["derive"] }
serde_json = "^1.0.51"
tungstenite = "^0.10.0"
reqwest = { version = "^0.10.4", features = ["blocking", "json"] }
base64 = "^0.12.0"
